Mon May 19 02:53:21 CDT 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ACE version 5.6.5 released.

Fri May 16 10:13:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted change below, causes problems in the builds
        * include/makeinclude/platform_linux.GNU:
          Only set DLD and LD when they are not set yet

Fri May 16 07:50:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Based_Pointer_Test.cpp:
          Also define a public destructor to silence the gnu warning that
          we only have private

Fri May 16 07:49:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Monitor/Num_Threads/num_threads.cpp:
          Fixed compile errors when monitoring framework is disabled

Fri May 16 07:41:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Streams/Answerer.cpp:
        * examples/APG/Streams/EndTask.h:
          Replaced EndTask with TheEndTask to resolve a name conflict
          when using MinGW

Fri May 16 07:18:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux.GNU:
        * include/makeinclude/platform_linux_common.GNU:
          Support lib64 paths to detect certain features. Thanks to Ken
          Sedgwick <ksedgwick at bonsai dot com> for reporting this

        * include/makeinclude/platform_linux.GNU:
          Only set DLD and LD when they are not set yet

Thu May 15 14:00:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Based_Pointer_T.{h,inl}:
        * tests/Based_Pointer_Test.cpp:
          Fixed bugzilla 3285, make it possible to use
          ACE_Based_Pointer<void>. Thanks to Thomas Brownridge
          <thomas dot brownridge at lmco dot com> for reporting this.

Thu May 15 12:36:42 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/MMAP_Memory_Pool.cpp:
          When using a default base address of 0x0 and otherwise wanting