@@ -192,7 +192,4 @@
 #define ACE_LACKS_UNIX_SYSLOG 1
 #define ACE_LACKS_ALPHASORT 1
 
-#define ACE_HAS_SOCK_BUF_SIZE_MAX
-#define ACE_HAS_SOCK_BUF_SIZE_MAX_VALUE 65535
-
 #endif
