@@ -33,8 +33,9 @@
       </LI>
     </UL>
     <hr>
-    We do have the documentation for previous releases and beta's
+    We do have the documentation for previous releases
     <ul>
+      <LI><P><A HREF="5.6.5/html">5.6.5</A></P></LI>
       <LI><P><A HREF="5.6.4/html">5.6.4</A></P></LI>
       <LI><P><A HREF="5.6.3/html">5.6.3</A></P></LI>
       <LI><P><A HREF="5.6.2/html">5.6.2</A></P></LI>
