@@ -1,3 +1,15 @@
+Mon May 19 14:19:21 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/bczar/bczar.html:
+          Updated mailing lists
+
+        * docs/Download.html:
+        * etc/index.html:
+          Updated for x.6.5
+
+        * ace/config-openvms.h:
+          Removed sock max of 64kb
+
 Mon May 19 02:53:21 CDT 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* ACE version 5.6.5 released.
